# the-archer

./: .gitignore  Makefile  README.md  cli.py  eda.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
logos/: README.md  get_logos.py
the_archer/: __init__.py  columns.py  constants.py  grid.py  io.py  save.py  shot_model.py
the_archer/data/mens/: tournament_teams.txt
